tests/NormalTests/paczka1/small_fuzzy/97171958.err
Error in line 9: 3QWmGyolHN1 A656 7,1
Error in line 14: c0dWMu1Jb S913 7,21
Error in line 5: c0dWMu1Jb S913 4,7
